<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.cvag.edubyte.ui.home.HomeFragment"
        android:label="@string/tab1"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_videos"
        android:name="com.cvag.edubyte.ui.videos.VideosFragment"
        android:label="@string/tab2"
        tools:layout="@layout/fragment_videos" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.cvag.edubyte.ui.profiles.ProfilesFragment"
        android:label="@string/tab3"
        tools:layout="@layout/fragment_profiles" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.cvag.edubyte.ui.settings.SettingsFragment"
        android:label="@string/tab4"
        tools:layout="@layout/fragment_settings" />
</navigation>