<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.cvag.edubyte.MainActivity">

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="0dp"
        android:layout_height="230dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/pullRefresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/layoutHeadTxt1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:orientation="vertical"
                        android:visibility="visible">

                        <TextView
                            style="@style/text16BoldCharcoal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="1dp"
                            android:drawableStart="@drawable/ic_common_icon"
                            android:drawablePadding="6dp"
                            android:gravity="center_vertical"
                            android:text="@string/updates" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recycleViewHighlight"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:clipToPadding="false"
                            android:visibility="visible"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            tools:itemCount="1"
                            tools:listitem="@layout/item_updates_single" />

                    </LinearLayout>

                    <View
                        android:id="@+id/divider1"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />


                    <LinearLayout
                        android:id="@+id/layoutHeadTxt2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:orientation="vertical"
                        android:visibility="visible">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="1dp"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/text16BoldCharcoal"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:drawableStart="@drawable/ic_common_icon"
                                android:drawablePadding="6dp"
                                android:gravity="center_vertical"
                                android:text="@string/news" />

                            <Button
                                android:id="@+id/buttonSeeAllPromo"
                                style="@style/Widget.AppCompat.Button.Borderless"
                                android:layout_width="wrap_content"
                                android:layout_height="35dp"
                                android:layout_gravity="end"
                                android:fontFamily="@font/gotham_bold"
                                android:text="@string/view_more"
                                android:textAllCaps="false"
                                android:textColor="@color/purple"
                                android:textSize="12sp" />

                        </LinearLayout>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recycleViewPromo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:clipToPadding="false"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            tools:itemCount="1"
                            tools:listitem="@layout/item_updates_single" />

                    </LinearLayout>

                    <View
                        android:id="@+id/divider2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />


                    <LinearLayout
                        android:id="@+id/layoutHeadTxt3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:orientation="vertical"
                        android:visibility="visible">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="1dp"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/text16BoldCharcoal"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:drawableStart="@drawable/ic_common_icon"
                                android:drawablePadding="6dp"
                                android:gravity="center_vertical"
                                android:text="@string/news" />

                            <Button
                                android:id="@+id/buttonSeeAllNews"
                                style="@style/Widget.AppCompat.Button.Borderless"
                                android:layout_width="wrap_content"
                                android:layout_height="35dp"
                                android:layout_gravity="end"
                                android:fontFamily="@font/gotham_bold"
                                android:text="@string/see_all"
                                android:textAllCaps="false"
                                android:textColor="@color/purple"
                                android:textSize="12sp" />

                        </LinearLayout>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recycleViewNews"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:clipToPadding="false"
                            android:visibility="visible"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            tools:itemCount="1"
                            tools:listitem="@layout/item_updates_single" />

                    </LinearLayout>

                    <View
                        android:id="@+id/divider3"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:background="@color/white" />


                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
